--- a/templates/order_parts/order_parts.html
+++ b/templates/order_parts/order_parts.html
@@ -7,4 +7,8 @@
     {{ form }}
     <input type="submit" value="Submit">
 </form>
+
+<form action="{% url 'parts_successfully_ordered' %}" method="get">
+    <input type="submit" value="See All Items in DB">
+</form>
 {% endblock %}
