displaying djangotables2 data clenaly

--- a/templates/order_parts/order_parts.html
+++ b/templates/order_parts/order_parts.html
@@ -8,7 +8,7 @@
     <input type="submit" value="Submit">
 </form>
 
-<form action="{% url 'parts_successfully_ordered' %}" method="get">
+<form action="{% url 'success' %}" method="get">
     <input type="submit" value="See All Items in DB">
 </form>
 {% endblock %}
