added datetime to parts ordering model

--- a/templates/order_parts/AllPartOrders.html
+++ b/templates/order_parts/AllPartOrders.html
@@ -2,8 +2,7 @@
 {% load render_table from django_tables2 %}
 
 {% block order_parts_content %}
-<h2>Parts Ordered Successfully!</h2>
-<p>Here are the parts you ordered:</p>
+<p>All Part Orders</p>
 
 <body>
     {% render_table object_list %}
