show today's parts ordered

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     {% block home_content %}{% endblock %}
+    {% block sort_order_parts_content %}{% endblock %}
     {% block order_parts_content %}{% endblock %}
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
