--- a/templates/order_parts/order_parts.html
+++ b/templates/order_parts/order_parts.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
+
 {% block order_parts_content %}
 <h2>Order Parts</h2>
 <p>Enter the work orders here:</p>
 
 <form action="{% url 'part_order_form' %}" method="post">
-  <div class="form-group">
     {% csrf_token %}
-      {{ form }}
-  </div>
+    {{ form|crispy}}
     <input type="submit" value="Submit">
 </form>
 
