--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     {% block home_content %}{% endblock %}
     {% block sort_order_parts_content %}{% endblock %}
     {% block order_parts_content %}{% endblock %}
+    {% block sort_buttons %}{% endblock %}
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
