--- a/templates/order_parts/order_parts.html
+++ b/templates/order_parts/order_parts.html
@@ -4,7 +4,7 @@
 
 {% block order_parts_content %}
 <h2>Order Parts</h2>
-<p>Enter the work orders here:</p>
+<p>Enter the required data here:</p>
 
 <form action="{% url 'part_order_form' %}" method="post">
     {% csrf_token %}
@@ -12,13 +12,6 @@
     <input type="submit" value="Submit">
 </form>
 
-<form action="{% url 'all_part_orders' %}" method="get">
-    <input type="submit" value="See All Parts Ordered" class="btn btn-primary">
-</form>
 
-
-<form action="{% url 'todays_part_orders' %}" method="get">
-<button type="submit" class="button">See Today's Parts Ordered</button>
-</form>
 
 {% endblock %}
