--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <title>{% block title %}The Service Technician Tool{% endblock %}</title>
   </head>
   <body>
+    {% block delete_confirm_alert %}{% endblock %}
     {% block new_part_order_btn %}{% endblock %}
     {% block home_content %}{% endblock %}
     {% block sort_order_parts_content %}{% endblock %}
