--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-            <form action="{% url 'PartsOrderedIndex' %}" method="get">
+            <form action="{% url 'jobIndexView' %}" method="get">
                 <button type="submit">My Jobs</button>
             </form>
         </div>
