--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
   <body>
     {% block home_content %}{% endblock %}
     {% block jobs_content %}{% endblock %}
+    {% block technicians_content %}{% endblock %}
     {% block delete_confirm_alert %}{% endblock %}
     {% block new_part_order_btn %}{% endblock %}
     {% block sort_order_parts_content %}{% endblock %}
