modified template partorder details

--- a/templates/order_parts/detail.html
+++ b/templates/order_parts/detail.html
@@ -2,6 +2,7 @@
 <h2>{{ part_order.part_number }}</h2>
 <h3>{{ part_order.part_type }}</h3>
 <h3>{{ part_order.reason_needed }}</h3>
+<h3>{{ part_order.ordered_by }}</h3>
 
 <form action="" method="get">
     <button type="submit" class="button">See Today's Parts Ordered</button>
