--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,7 @@
     <title>{% block title %}The Service Technician Tool{% endblock %}</title>
   </head>
   <body>
-    {% block home_content %}{% endblock %}
-    {% block jobs_content %}{% endblock %}
-    {% block technicians_content %}{% endblock %}
-    {% block delete_confirm_alert %}{% endblock %}
-    {% block new_part_order_btn %}{% endblock %}
-    {% block sort_order_parts_content %}{% endblock %}
-    {% block order_parts_content %}{% endblock %}
-    {% block sort_buttons %}{% endblock %}
+    {% block content %}{% endblock %}
 
     <!-- Go Home Button -->
     <form action="{% url 'index' %}" method="get">
