--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block home_content %}
+{% block content %}
     <h1>Welcome to RepairManMan</h1>
     <h2>The Tool for Service Techs</h2>
     <img src="https://media4.giphy.com/media/l4EoYkobJRhtYnvm8/giphy.gif" style="width: 15%"><br>
