fixed errors with part ordering

--- a/templates/order_parts/detail.html
+++ b/templates/order_parts/detail.html
@@ -1,4 +1,4 @@
-<h1>Part Order ID: <a href="{% url 'update' part_order.id%}">{{ part_order.id }}</a>, Work Order: {{ part_order.work_order }}</h1>
+<h1>Part Order ID: <a href="{% url 'update_part' part_order.id%}">{{ part_order.id }}</a>, Work Order: {{ part_order.work_order }}</h1>
 <h2>{{ part_order.part_number }}</h2>
 <h3>{{ part_order.part_type }}</h3>
 <h3>{{ part_order.reason_needed }}</h3>
