--- a/templates/order_parts/order_parts.html
+++ b/templates/order_parts/order_parts.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
-{% block order_parts_content %}
+{% block content %}
 <h2>Order Parts</h2>
 <p>Enter the required data here:</p>
 
@@ -11,7 +11,5 @@
     {{ form|crispy}}
     <input type="submit" value="Submit">
 </form>
-
-
 
 {% endblock %}
