--- a/templates/technicians/index.html
+++ b/templates/technicians/index.html
@@ -20,7 +20,7 @@
             </ul>
 
         {% else %}
-            <p>No Technicians have been created yet.</p>
+            <p>No Jobs have been created yet.</p>
         {% endif %}
 
     {% endblock %}
