--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -17,6 +17,11 @@
                 <button type="submit">Order Parts</button>
             </form>
         </div>
+          <div class="col-sm">
+            <form action="{% url 'technicianIndexView' %}" method="get">
+                <button type="submit">Technicians</button>
+            </form>
+        </div>
         <div class="col-sm">
             <button>My Data</button>
         </div>
