--- a/templates/order_parts/detail.html
+++ b/templates/order_parts/detail.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h1>Part Order ID: <a href="{% url 'update_part' part_order.id%}">{{ part_order.id }}</a>, Work Order: {{ part_order.work_order }}</h1>
 <h2>{{ part_order.part_number }}</h2>
 <h3>{{ part_order.part_type }}</h3>
@@ -7,3 +11,5 @@
 <form action="" method="get">
     <button type="submit" class="button">See Today's Parts Ordered</button>
 </form>
+
+{% endblock %}
